[gd_scene load_steps=10 format=3 uid="uid://c7pl5lp5xye2x"]

[ext_resource type="Script" path="res://UI/GameOverUI/GameOverUI.gd" id="1_5jg2x"]
[ext_resource type="FontFile" uid="uid://bo46ww57g35wi" path="res://Font/PIXBOB LITE.ttf" id="2_046j3"]
[ext_resource type="Texture2D" uid="uid://dccmnutwbpr5e" path="res://UI/SilverButton/[1] Normal.png" id="2_tl1eh"]
[ext_resource type="Texture2D" uid="uid://dl62enq7xycua" path="res://UI/SilverButton/[2] Clicked.png" id="3_60mh0"]
[ext_resource type="Texture2D" uid="uid://bm1twp6n8qqhm" path="res://UI/SilverButton/[3] Hover.png" id="4_v8vhk"]

[sub_resource type="LabelSettings" id="LabelSettings_b8efr"]
font = ExtResource("2_046j3")
font_size = 22
font_color = Color(0.219608, 0.219608, 0.219608, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5lxr2"]
font = ExtResource("2_046j3")
font_size = 30
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_g2epn"]
font = ExtResource("2_046j3")
font_size = 22
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_i7gcr"]
font = ExtResource("2_046j3")
font_size = 22
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="GameOverUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5jg2x")

[node name="RestartBtn" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = 36.0
offset_right = 43.5
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_tl1eh")
texture_pressed = ExtResource("3_60mh0")
texture_hover = ExtResource("4_v8vhk")
stretch_mode = 5

[node name="Label" type="Label" parent="RestartBtn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -14.5
offset_right = 32.5
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
text = "RESTART"
label_settings = SubResource("LabelSettings_b8efr")

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -72.0
offset_right = 54.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_5lxr2")
horizontal_alignment = 1

[node name="Score" type="Label" parent="GameOverLabel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -12.0
offset_right = 49.0
offset_bottom = 12.0
grow_vertical = 2
text = "SCORE "
label_settings = SubResource("LabelSettings_g2epn")
vertical_alignment = 1

[node name="EnemiesKilled" type="Label" parent="GameOverLabel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 18.0
offset_right = 138.0
offset_bottom = 43.0
grow_vertical = 2
text = "ENEMIES KILLED "
label_settings = SubResource("LabelSettings_i7gcr")
vertical_alignment = 1

[connection signal="pressed" from="RestartBtn" to="." method="_on_restart_btn_pressed"]
